# vlm_demo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  main.py  services.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
